--- a/app/src/main/res/layout/activity_register_device.xml
+++ b/app/src/main/res/layout/activity_register_device.xml
@@ -4,9 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#71C2E8"
+    android:background="@drawable/gradientregistermenu"
     tools:context="com.example.login.MainActivity">
-
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -42,13 +41,12 @@
             android:textColorHint="?android:attr/textColorHintInverse"
             android:textSize="21sp" />
 
-
         <Button
             android:id="@+id/login"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:layout_marginBottom="30dp"
-            android:background="@android:color/transparent"
+            android:background="@android:color/holo_orange_dark"
             android:text="Registrar dispositivo"
             android:textAllCaps="false"
             android:textColor="@color/white"
@@ -56,5 +54,4 @@
             android:textStyle="bold" />
 
     </LinearLayout>
-
 </RelativeLayout>
