--- a/app/src/main/res/layout/activity_register_device.xml
+++ b/app/src/main/res/layout/activity_register_device.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/gradientregistermenu"
-    tools:context="com.example.login.MainActivity">
+    tools:context="com.example.login.RegisterDeviceActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -26,11 +26,11 @@
             app:srcCompat="@drawable/feicon" />
 
         <EditText
-            android:id="@+id/username"
+            android:id="@+id/deviceNameRegisterId"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:layout_marginBottom="10dp"
-            android:background="@android:color/holo_blue_light"
+            android:background="#8ACDE6"
             android:drawableStart="@android:color/holo_blue_bright"
             android:drawablePadding="10dp"
             android:ems="10"
@@ -42,7 +42,7 @@
             android:textSize="21sp" />
 
         <Button
-            android:id="@+id/login"
+            android:id="@+id/registerButtonId"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:layout_marginBottom="30dp"
