--- a/app/src/main/res/drawable/gradientdialogs.xml
+++ b/app/src/main/res/drawable/gradientdialogs.xml
@@ -1,4 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <gradient
+        android:startColor="#7AD7F0"
+        android:centerColor="#B7E9F7"
+        android:endColor="#DBF3FA"
+        android:angle="0" />
+</shape>
