--- a/app/src/main/res/layout/activity_register_device.xml
+++ b/app/src/main/res/layout/activity_register_device.xml
@@ -26,7 +26,7 @@
             app:srcCompat="@drawable/feicon" />
 
         <EditText
-            android:id="@+id/username"
+            android:id="@+id/deviceNameEditText"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:layout_marginBottom="10dp"
@@ -42,7 +42,7 @@
             android:textSize="21sp" />
 
         <Button
-            android:id="@+id/login"
+            android:id="@+id/registerDeviceButton"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:layout_marginBottom="30dp"
